Add instructions to set environment variable that gives more memory to SBT
Without "-XX:MaxPermSize=256m", SBT often runs out of PermGen space
when compiling.